Hook up links and fix z-index for filter-container and overlay

--- a/source/_sass/_top-section.scss
+++ b/source/_sass/_top-section.scss
@@ -249,6 +249,7 @@
     .filter-container {
       display: none;
       padding-top: 1.5rem;
+      z-index: 1;
     }
     .expand {
       display: inline;
